welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:3: error: unclosed character literal
    while(estSurBiscuit==false){     '
                                     ^